--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,9 +57,57 @@
 <!-- Layout -->
 
 <section size="A4">
+  <div class="left"></div>
+  <div class="page">
+    <div class="header">
+      <div style="width: 2cm">TEST</div>
+      <div class="stretched">TEST</div>
+      <div style="width: 2cm">TEST</div>
+    </div>
 
-  test
+    <div class="paragraph">
+      test...
+    </div>
 
+    <div class="paragraph">
+      test...
+    </div>
+
+    <div class="paragraph">
+      test...
+    </div>
+
+    <div class="paragraph">
+      test...
+    </div>
+
+    <div class="paragraph">
+      test...
+    </div>
+
+    <div class="paragraph">
+      test...
+    </div>
+
+    <div class="paragraph">
+      test...
+    </div>
+
+    <div class="paragraph">
+      test...
+    </div>
+
+    <div class="stretched">
+      EMPTY
+    </div>
+
+    <div class="footer">
+      <div style="width: 2cm">TEST</div>
+      <div class="stretched">TEST</div>
+      <div style="width: 2cm">TEST</div>
+    </div>
+  </div>
+  <div class="right"></div>
 </section>
 <section size="A4"></section>
 <section size="A4" layout="landscape"></section>
